# DWIGHT

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  req.txt  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
dwight/data/: __init__.py  dataset.py  processor.py
dwight/modeling/: predict.py  train.py
dwight/models/: saved_model.pb
models/: gen_dwight.h5  tok.pickle
notebooks/: data_processing.ipynb  generation_test.ipynb  m-2000.model  m-2000.vocab  subtoken_test.ipynb  text_generation_wordlevel.ipynb
src/: main.py  word_vec_test.py
src/data/: __init__.py  build_data.py  data_collector.py  dataset.py  processor.py
src/modeling/: __init__.py  predict.py  processor.py  train.py
src/models/variables/: variables.index
