[tool.poetry]
name = "dwight"
version = "0.1.0"
description = "Conversational modeling for `The Office` characters"
authors = ["Ugo Loobuyck <ugo813@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.5.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
matplotlib = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
